# computer-vision

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/api/: filter.rs
src/cv/: grayscale.rs  helper.rs  kmeans.rs  mod.rs  posterize.rs  sobel.rs  vision.rs
src/gui/: index.html  main_screen.rs
