[package]
name = "comp_vision"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
image = "0.25.2"
rayon = "1.10.0"
actix-web = "4"
actix-files = "0.6.6"
tokio = { version = "1", features = ["full"] }
actix-multipart = "0.7.2"
futures-util = "0.3.30"
indicatif = "0.17.8"
